--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="noIngredients">No ingredients available</string>
+    <string name="noIngredients">No ingredients or no internet connection available</string>
     <string name="title_activity_video">VideoActivity</string>
 </resources>
