An espresso test

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="noIngredients">No ingredients or no internet connection available</string>
     <string name="title_activity_video">VideoActivity</string>
+    <string name="ingredientsLabel">Ingredients</string>
 </resources>
