--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,6 @@
     <string name="add_widget">Add widget</string>
     <string name="ingredients_for">Ingredients for:</string>
     <string name="appwidget_text2">Ingredients of desired recipe</string>
+    <string name="isDesired">is now a desired recipe!</string>
+    <string name="recipesVideo">Recipe\'s step video</string>
 </resources>
