No internet fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="appwidget_text2">Ingredients of desired recipe</string>
     <string name="isDesired">is now a desired recipe!</string>
     <string name="recipesVideo">Recipe\'s step video</string>
+    <string name="please_connect_to_internet">Please connect to internet to get info about the recipes!</string>
 </resources>
