--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="isDesired">is now a desired recipe!</string>
     <string name="recipesVideo">Recipe\'s step video</string>
     <string name="please_connect_to_internet">Please connect to internet to get info about the recipes!</string>
+    <string name="please_connect_to_internetSteps">Please connect to internet to get info about the recipe steps</string>
     <string name="mustImplementOnFrIntListener">must implement OnFragmentInteractionListener</string>
 </resources>
